plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id "io.freefair.lombok" version "6.6.1"
}

group = 'org.qw3rtrun.p3d'
version = '0.0.1-SNAPSHOT'

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
    }

    sourceCompatibility = JavaVersion.VERSION_20
    targetCompatibility = JavaVersion.VERSION_20

    compileJava.options.encoding = "UTF-8"
    compileTestJava.options.encoding = "UTF-8"

    compileJava {
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }
}

tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }

dependencies {
    implementation project(':core')
    implementation project(':api')
    implementation project(':printersmng')
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.webjars:webjars-locator-core'
    implementation 'org.webjars.npm:bootstrap:5.1.3'
    implementation 'org.webjars.npm:vue:3.2.45'
    implementation 'org.webjars.npm:popperjs__core:2.11.6'
    implementation 'org.webjars.npm:feather-icons:4.29.0'
    implementation 'org.webjars.npm:bootstrap-icons:1.11.0'
    implementation 'org.webjars.bower:mdi:2.1.19'
    implementation 'org.webjars.bower:simple-line-icons:2.4.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

//sourceSets {
//    main {
//        resources {
//            srcDirs += [
//                    'printersmng/src/main/resources'
//            ]
//        }
//    }
//}
